@@ -1,6 +1,6 @@
 Package: countreg
 Version: 0.2-0
-Date: 2016-09-20
+Date: 2017-01-27
 Title: Count Data Regression
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
              person(given = "Christian", family = "Kleiber", role = "aut", email = "Christian.Kleiber@unibas.ch"))
